crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__logical_operator__and.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/and.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (and false 1.0))
   (print (and true 1.0))
   (print (and (and 1.0 2.0) false))
   (print (and 1.0 true))
   (print (and (and 1.0 2.0) 3.0))
   (var a @1 "before")
   (var b @2 "before")
   (expr (and (and (group (= (local a @1) true)) (group (= (local b @2) false))) (group (= (local a @1) "bad"))))
   (print (local a @1))
   (print (local b @2)))

----- stderr -----
