crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__logical_operator__and_truth.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/and_truth.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (and false "bad"))
   (print (and nil "bad"))
   (print (and true "ok"))
   (print (and 0.0 "ok"))
   (print (and "" "ok")))

----- stderr -----
