crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__logical_operator__or_truth.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/logical_operator/or_truth.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (or false "ok"))
   (print (or nil "ok"))
   (print (or true "ok"))
   (print (or 0.0 "ok"))
   (print (or "s" "ok")))

----- stderr -----
